# icons

./: .gitignore  README.md  pyproject.toml
docs/: index.html
icons/: collect_grads.py  generalist.py  influence_matrix.py  merge_chunks.py  missing_chunks.py  obtain_info.py  utils.py  write.py
llava_train_scripts/: 7b_finetune_lora.sh
scripts/: 0_get_training_data_grads.sh  0_slurm_trainining_data_grads.sh  1_merge_train_gradient.sh  2_get_val_data_grads.sh  2_slurm_get_val_data_grads.sh  3_specialist.sh  4_generalist.sh
utils/: split.py
